Added resource file and a llama image. Added it to the code for it to be displayed on the screen.

--- a/ulmainwindow.ui
+++ b/ulmainwindow.ui
@@ -85,6 +85,19 @@
      <string>Cheat Mode</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="startButton">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>310</y>
+      <width>98</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Start Game</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
