Added a Chest Image/displays it on screen.

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>images/llama.jpg</file>
+        <file>images/download.jpg</file>
     </qresource>
 </RCC>
