--- a/ulmainwindow.ui
+++ b/ulmainwindow.ui
@@ -41,7 +41,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>How to Play</string>
@@ -88,21 +88,43 @@
       <height>27</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
     <property name="text">
      <string>Cheat Mode</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="startButton">
+   <widget class="QPushButton" name="easyStartButton">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>630</x>
       <y>310</y>
-      <width>98</width>
+      <width>81</width>
       <height>27</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
     <property name="text">
-     <string>Start Game</string>
+     <string>Easy</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="hardStartButton">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>310</y>
+      <width>81</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Hard</string>
     </property>
    </widget>
   </widget>
