--- a/ulmainwindow.ui
+++ b/ulmainwindow.ui
@@ -14,7 +14,8 @@
    <string>ULMainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(52, 104, 156);</string>
+   <string notr="true">background-color: rgb(52, 104, 156);
+color: rgb(255, 255, 255);</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QWidget" name="widgetGame" native="true">
