--- a/ulmainwindow.ui
+++ b/ulmainwindow.ui
@@ -18,6 +18,12 @@
 color: rgb(255, 255, 255);</string>
   </property>
   <widget class="QWidget" name="centralWidget">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <widget class="QWidget" name="widgetGame" native="true">
     <property name="geometry">
      <rect>
@@ -26,6 +32,12 @@ color: rgb(255, 255, 255);</string>
       <width>451</width>
       <height>421</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
     <property name="styleSheet">
      <string notr="true">border-image: url(:/images/ocean_floor.jpg);
