--- a/ulmainwindow.ui
+++ b/ulmainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>827</width>
-    <height>478</height>
+    <width>871</width>
+    <height>492</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,8 +29,8 @@ color: rgb(255, 255, 255);</string>
      <rect>
       <x>170</x>
       <y>0</y>
-      <width>451</width>
-      <height>421</height>
+      <width>531</width>
+      <height>491</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -47,11 +47,14 @@ color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="buttonInstructions">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>390</y>
-      <width>98</width>
+      <x>750</x>
+      <y>310</y>
+      <width>101</width>
       <height>27</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 255, 255);</string>
@@ -63,9 +66,9 @@ color: rgb(255, 255, 255);</string>
    <widget class="QLabel" name="labelLife">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>30</x>
       <y>20</y>
-      <width>66</width>
+      <width>111</width>
       <height>17</height>
      </rect>
     </property>
@@ -79,7 +82,7 @@ color: rgb(255, 255, 255);</string>
    <widget class="QLabel" name="labelPesos">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>30</x>
       <y>50</y>
       <width>111</width>
       <height>17</height>
@@ -95,11 +98,14 @@ color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="cheatButton">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>350</y>
-      <width>98</width>
+      <x>750</x>
+      <y>270</y>
+      <width>101</width>
       <height>27</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 255, 255);</string>
@@ -111,11 +117,14 @@ color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="easyStartButton">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>310</y>
-      <width>81</width>
+      <x>750</x>
+      <y>170</y>
+      <width>101</width>
       <height>27</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 255, 255);</string>
@@ -127,11 +136,14 @@ color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="hardStartButton">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>310</y>
-      <width>81</width>
+      <x>750</x>
+      <y>210</y>
+      <width>101</width>
       <height>27</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 255, 255);</string>
@@ -144,7 +156,7 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>140</y>
+      <y>160</y>
       <width>120</width>
       <height>61</height>
      </rect>
@@ -160,9 +172,12 @@ color: rgb(255, 255, 255);</string>
       <rect>
        <x>0</x>
        <y>30</y>
-       <width>98</width>
+       <width>101</width>
        <height>27</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -176,7 +191,7 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>220</y>
+      <y>240</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -192,9 +207,12 @@ color: rgb(255, 255, 255);</string>
       <rect>
        <x>0</x>
        <y>30</y>
-       <width>98</width>
+       <width>101</width>
        <height>27</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -208,9 +226,12 @@ color: rgb(255, 255, 255);</string>
       <rect>
        <x>0</x>
        <y>70</y>
-       <width>98</width>
+       <width>101</width>
        <height>27</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
@@ -220,20 +241,33 @@ color: rgb(255, 255, 255);</string>
      </property>
     </widget>
    </widget>
+   <widget class="QLabel" name="labelLogo">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>0</y>
+      <width>551</width>
+      <height>491</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="resources.qrc">:/images/logo_blue.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>false</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>827</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
