--- a/resources.qrc
+++ b/resources.qrc
@@ -11,5 +11,6 @@
         <file>textfiles/hardworld.ulworld</file>
         <file>images/rock.png</file>
         <file>images/logo_blue.png</file>
+        <file>images/pm8gm.gif</file>
     </qresource>
 </RCC>
