--- a/ulmainwindow.ui
+++ b/ulmainwindow.ui
@@ -48,7 +48,7 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>750</x>
-      <y>310</y>
+      <y>360</y>
       <width>101</width>
       <height>27</height>
      </rect>
@@ -99,7 +99,7 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>750</x>
-      <y>270</y>
+      <y>440</y>
       <width>101</width>
       <height>27</height>
      </rect>
@@ -114,61 +114,23 @@ color: rgb(255, 255, 255);</string>
      <string>Cheat Mode</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="easyStartButton">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>750</x>
-      <y>170</y>
-      <width>101</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);</string>
-    </property>
-    <property name="text">
-     <string>Easy</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="hardStartButton">
-    <property name="geometry">
-     <rect>
-      <x>750</x>
-      <y>210</y>
-      <width>101</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);</string>
-    </property>
-    <property name="text">
-     <string>Hard</string>
-    </property>
-   </widget>
    <widget class="QGroupBox" name="gbxWorldBtns">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>160</y>
-      <width>120</width>
-      <height>61</height>
+      <y>190</y>
+      <width>101</width>
+      <height>151</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);</string>
+     <string notr="true"/>
     </property>
     <property name="title">
-     <string>World (Level)</string>
+     <string>Start a Game</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
     <widget class="QPushButton" name="btnCreateWorld">
      <property name="geometry">
@@ -189,27 +151,11 @@ color: rgb(255, 255, 255);</string>
       <string>Create World</string>
      </property>
     </widget>
-   </widget>
-   <widget class="QGroupBox" name="gbxStateBtns">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>240</y>
-      <width>111</width>
-      <height>101</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);</string>
-    </property>
-    <property name="title">
-     <string>State (Game)</string>
-    </property>
-    <widget class="QPushButton" name="btnLoadState">
+    <widget class="QPushButton" name="hardStartButton">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>30</y>
+       <y>110</y>
        <width>101</width>
        <height>27</height>
       </rect>
@@ -221,10 +167,13 @@ color: rgb(255, 255, 255);</string>
       <string notr="true">color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
-      <string>Load...</string>
+      <string>Hard</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="btnSaveState">
+    <widget class="QPushButton" name="easyStartButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="geometry">
       <rect>
        <x>0</x>
@@ -240,7 +189,61 @@ color: rgb(255, 255, 255);</string>
       <string notr="true">color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
+      <string>Easy</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="gbxStateBtns">
+    <property name="geometry">
+     <rect>
+      <x>740</x>
+      <y>50</y>
+      <width>121</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="title">
+     <string>Save/Load Game</string>
+    </property>
+    <widget class="QPushButton" name="btnSaveState">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>70</y>
+       <width>85</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
       <string>Save...</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnLoadState">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>30</y>
+       <width>85</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
+      <string>Load...</string>
      </property>
     </widget>
    </widget>
@@ -268,34 +271,43 @@ color: rgb(255, 255, 255);</string>
    </widget>
    <widget class="QPushButton" name="btnMP">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>420</y>
+      <y>440</y>
       <width>98</width>
       <height>27</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>MultiPlayer</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="hiscoreBtn">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>350</y>
-      <width>98</width>
+      <x>750</x>
+      <y>400</y>
+      <width>101</width>
       <height>27</height>
      </rect>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="text">
-     <string>Hiscores</string>
+     <string>High Scores</string>
     </property>
    </widget>
   </widget>
