--- a/ulmainwindow.ui
+++ b/ulmainwindow.ui
@@ -118,9 +118,9 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>190</y>
+      <y>200</y>
       <width>101</width>
-      <height>151</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -155,28 +155,6 @@ color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>110</y>
-       <width>101</width>
-       <height>27</height>
-      </rect>
-     </property>
-     <property name="cursor">
-      <cursorShape>PointingHandCursor</cursorShape>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
-     </property>
-     <property name="text">
-      <string>Hard</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="easyStartButton">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>0</x>
        <y>70</y>
        <width>101</width>
        <height>27</height>
@@ -189,7 +167,7 @@ color: rgb(255, 255, 255);</string>
       <string notr="true">color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
-      <string>Easy</string>
+      <string>Basic World</string>
      </property>
     </widget>
    </widget>
