--- a/ulmainwindow.ui
+++ b/ulmainwindow.ui
@@ -151,7 +151,7 @@ color: rgb(255, 255, 255);</string>
       <string>Create World</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="hardStartButton">
+    <widget class="QPushButton" name="btnStandWorld">
      <property name="geometry">
       <rect>
        <x>0</x>
